<resources>
    <string name="app_name">Heyoo</string>
    <string name="home">Home</string>
    <string name="calendar">Calendars</string>
    <string name="task">Tasks</string>
    <string name="message">Messages</string>
    <string name="alerts">Alerts</string>
    <string name="test">test</string>
    <string name="month_view">Month View</string>
    <string name="week_view">Week View</string>
    <string name="new_event">New Event</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="email">Email</string>
    <string name="email_hint">Your Email</string>
    <string name="phone_number_enter">Enter Your Phone Number</string>
    <string name="phone_number_hint">Your Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_inquiry">Already have an account? Sign in Here</string>
    <string name="chooser_title">Select Image Source</string>
    <string name="question">"?"</string>
    <string name="edit">Edit</string>
    <string name="publish">Publish</string>
    <string name="publish_all">Publish All</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="enter_confirmation_code">Enter Confirmation Code</string>
    <string name="cancel">Cancel</string>
    <string name="resend_code">Resend Code</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="register_inquiry">Don\'t have an account? Register Here</string>
    <string name="my_calendars">My Calendars</string>
    <string name="create_calendar">Create Calendar</string>
    <string name="amethyst">amethyst</string>
    <string name="butterscotch">butterscotch</string>
    <string name="seafoamblue">seaFoamBlue</string>
    <string name="seafoamgreen">seaFoamGreen</string>
    <string name="palered">paleRed</string>
    <string name="dimyellow">dimYellow</string>
    <string name="darkpink">darkPink</string>
    <string name="enter_name_phone_or_email">Enter Name, Phone #, or Email</string>
    <string name="view">View</string>
    <string name="yes">Yes</string>
</resources>
