<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_calendars"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/calendar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_tasks"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/task"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_messages"
        android:enabled="true"
        android:icon="@android:drawable/gallery_thumb"
        android:title="@string/message"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_alerts"
        android:enabled="true"
        android:icon="@android:drawable/alert_dark_frame"
        android:title="@string/alerts"
        app:showAsAction="ifRoom"/>
</menu>