<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="MissingPrefix">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_dark_background"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/heyoo_logo_backdrop"
            android:layout_gravity="center"/>
    </FrameLayout>

    <TextView
        style="@style/TextAppearance.LoginSubtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_confirmation_code"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_marginTop="19dp"
        style="@style/TextAppearance.LoginSmallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmation_code"/>

    <EditText
        android:id="@+id/fr_confirmation_code"
        style="@style/TextAppearance.LoginBigText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_shadow_box"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:hint="@string/enter_confirmation_code"
        android:textColorHint="@color/shadow"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/tabselected"
        android:text="@string/resend_code"
        fontPath="fonts/NunitoSans-Regular.ttf"
        />

    <com.phdlabs.sungwon.heyoo.utility.MaterialRippleEffect
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:background="@drawable/button_curve_corner">
        <Button
            android:id="@+id/login_sign_button"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:text="@string/sign_up"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:elevation="5dp"/>

    </com.phdlabs.sungwon.heyoo.utility.MaterialRippleEffect>

    <TextView
        android:id="@+id/login_already_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/tabselected"
        android:textSize="18sp"
        fontPath="fonts/NunitoSans-Regular.ttf"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/cancel"/>

</LinearLayout>